# EzGz

./: CMakeLists.txt  ezgz.hpp  ezgz_test.cpp
.github/workflows/: ezgz_test.yml
